tests/snapshots/edit__add_input@quoted_input_with_dots_flake_true.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Add:
        id: vmsh
        uri: "github:mic92/vmsh"
        flake: true
---
{
  description = "Test quoted input names with dots";

  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
    "hls-1.10" = { url = "github:haskell/haskell-language-server/1.10.0.0"; flake = false; };
    "hls-2.0" = { url = "github:haskell/haskell-language-server/2.0.0.1"; flake = false; };
    crane = {
      url = "github:ipetkov/crane";
    };
    vmsh = {
      url = "github:mic92/vmsh";
    };
  };

  outputs = { self, nixpkgs, crane, ... }: { };
}
