tests/snapshots/edit__add_with_multiple_follows.snap
---
source: tests/edit.rs
expression: flake_edit.apply_change(change).unwrap().unwrap()
info:
  flake_nix: ""
  changes:
    - Add:
        id: crane-new
        uri: "github:ipetkov/crane"
        flake: true
        follows:
          - from: nixpkgs
            to: nixpkgs
          - from: flake-utils
            to: flake-utils
---
{
  description = "Manage your flake inputs comfortably.";

  inputs = {
    crane-new.url = "github:ipetkov/crane";
    crane-new.inputs.nixpkgs.follows = "nixpkgs";
    crane-new.inputs.flake-utils.follows = "flake-utils";
    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";

    flake-utils.url = "github:numtide/flake-utils";

    rust-overlay = {
      url = "github:oxalica/rust-overlay";
      inputs.nixpkgs.follows = "nixpkgs";
      inputs.flake-utils.follows = "flake-utils";
    };
    crane = {
      url = "github:ipetkov/crane";
      inputs.nixpkgs.follows = "nixpkgs";
      inputs.rust-overlay.follows = "rust-overlay";
      inputs.flake-utils.follows = "flake-utils";
    };
  };

  outputs = _: { };
}
