tests/snapshots/edit__change_url@first_nested_node_naersk.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Change:
        id: naersk
        uri: "github:nix-community/naersk/v1.0.0"
        ref_or_rev: ~
---
{
  description = "test file";

  inputs = {
    naersk = {
      url = "github:nix-community/naersk/v1.0.0";
      inputs.nixpkgs.follows = "nixpkgs";
    };
    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
    utils.url = "github:numtide/flake-utils";
    flake-compat = {
      url = "github:edolstra/flake-compat";
      flake = false;
    };
  };

  outputs =
    {
      self,
      nixpkgs,
      utils,
      naersk,
      flake-compat,
    }:
    { };
}
